# isoseq-prep

./: .gitignore  README.md  environment.yml  pyproject.toml
scripts/: README.md  add_zm_tag.py  add_zm_tag_inmemory.py  detect_kinnex.py  infer_adapters.py  infer_adapters_from_concatemers.py  infer_multiplex_primers.py  inspect_adapters.py  utils.py
src/p_hacking/: README.md  __init__.py  add_SM_tag.py  add_bx_tag.py  add_zm_tag.py  build_adapters_fasta.py  cli.py  detect_kinnex.py  infer_adapters.py  infer_adapters_from_concatemers.py  inspect_adapters.py  utils.py
test/: conftest.py  test_add_zm_tag.py
